--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -296,12 +296,25 @@
     <dimen name="config_viewConfigurationTouchSlop">4dp</dimen>
 
     <!-- Defines the system property to set for performance profile xe: sys.cpu.modes. Leave it
-         blank if the device do not support performance profiles 
-    --><string name="config_perf_profile_prop" translatable="false">sys.perf.profile</string>
+         blank if the device do not support performance profiles -->
+   
+    <string name="config_perf_profile_prop" translatable="false">sys.perf.profile</string>
 
     <!-- When config_perf_profile_prop is defined, this value MUST be the index of
          one of the listes values in frameworks/base/core/res/res/values/cm_arrays.xml
          for "perf_profile_values" array. Leave it blank if the device do not support
-         performance profiles  
-    --><string name="config_perf_profile_default_entry" translatable="false">1</string>
+         performance profiles --> 
+
+    <string name="config_perf_profile_default_entry" translatable="false">1</string>
+
+    <integer name="config_deviceHardwareKeys">71</integer>
+
+    <integer name="config_deviceHardwareWakeKeys">64</integer>
+
+    <string-array name="config_auto_perf_activities" translatable="false">
+        <item>com.aurorasoftworks.quadrant.*BenchmarkExecutionActivity,2</item>
+        <item>com.antutu.ABenchMark.*,2</item>
+        <item>.*com.antutu.benchmark.*,2</item>
+    </string-array>
+
 </resources>
