--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 **
-** Copyright 2011, The Android Open Source Project
+** Copyright 2014, The CyanogenMod Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License")
 ** you may not use this file except in compliance with the License.
@@ -23,47 +23,33 @@
      Each storage should have both a mountPoint and storageDescription attribute.
      The following attributes are optional:
 
-        primary:    (boolean) this storage is the primary external storage
-        removable:  (boolean) this is removable storage (for example, a real SD card)
-        emulated:   (boolean) the storage is emulated via the FUSE sdcard daemon
+        primary:    this storage is the primary external storage
+        removable:  this is removable storage (for example, a real SD card)
+        emulated:   the storage is emulated via the FUSE sdcard daemon
         mtpReserve: (integer) number of megabytes of storage MTP should reserve for free storage
                      (used for emulated storage that is shared with system's data partition)
         allowMassStorage: (boolean) true if this volume can be shared via USB mass storage
         maxFileSize: (integer) maximum file size in megabytes
 
       A storage should not have both emulated and removable set to true
+
 -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- internal emulated storage -->
-    <storage android:mountPoint="/storage/sdcard0"
-            android:storageDescription="@string/storage_internal"
-            android:primary="true"
-            android:emulated="true"
-            android:removable="false"
-            android:mtpReserve="100" />
-        <storage android:mountPoint="/storage/sdcard1"
-            android:storageDescription="@string/storage_sd_card"
-            android:primary="false"
-            android:emulated="false"
-            android:removable="true"
-            android:allowMassStorage="true" />
-        <storage android:mountPoint="/storage/uicc0"
-            android:storageDescription="@string/storage_uicc"
-            android:primary="false"
-            android:emulated="false"
-            android:removable="true"
-            android:allowMassStorage="true" />
-        <storage android:mountPoint="/storage/uicc1"
-            android:storageDescription="@string/storage_uicc"
-            android:primary="false"
-            android:emulated="false"
-            android:removable="true"
-            android:allowMassStorage="false" />
-        <storage android:mountPoint="/storage/usbotg"
-            android:storageDescription="@string/storage_usb"
-            android:primary="false"
-            android:emulated="false"
-            android:removable="true"
-            android:allowMassStorage="false" />
+    <storage android:storageDescription="@string/storage_internal"
+        android:emulated="true"
+        android:primary="true"
+        android:removable="false"
+        android:mtpReserve="100" />
+
+    <storage android:mountPoint="/storage/sdcard1"
+        android:storageDescription="@string/storage_sd_card"
+        android:removable="true"
+        android:allowMassStorage="true"
+        android:maxFileSize="4096" />
+
+    <!-- external USB drive -->
+    <storage android:mountPoint="/storage/usbotg"
+        android:storageDescription="@string/storage_usb"
+        android:removable="true" />
 </StorageList>
