--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -44,12 +44,16 @@
 
     <storage android:mountPoint="/storage/sdcard1"
         android:storageDescription="@string/storage_sd_card"
+        android:primary="false"
         android:removable="true"
-        android:allowMassStorage="true"
-        android:maxFileSize="4096" />
+        android:emulated="false"
+        android:allowMassStorage="true" />
 
     <!-- external USB drive -->
     <storage android:mountPoint="/storage/usbotg"
         android:storageDescription="@string/storage_usb"
-        android:removable="true" />
+        android:primary="false"
+        android:removable="true"
+        android:emulated="false"
+        android:allowMassStorage="true" />
 </StorageList>
