--- a/overlay/packages/apps/Dialer/res/values/config.xml
+++ b/overlay/packages/apps/Dialer/res/values/config.xml
@@ -1,8 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--Copyright (c) 2012, The Linux Foundation. All rights reserved.
-
-    Not a Contribution, Apache license notifications and license are retained
-    for attribution purposes only.
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+     Copyright (C) 2015 The CyanogenMod Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,12 +14,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <resources>
-    <!-- Whether to enable ETWS settings (Japan) -->
-    <bool name="show_etws_settings">true</bool>
-    <!-- Whether to enable CMAS settings (United States) -->
-    <bool name="show_cmas_settings">true</bool>
-    <!-- Whether to enable channel 50 settings (Brazil) -->
-    <bool name="show_brazil_settings">true</bool>
+    <bool name="call_recording_enabled">true</bool>
+    <integer name="call_recording_audio_source">4</integer>
 </resources>
