--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -257,4 +257,8 @@
          so that applications can still use their own mechanisms. -->
     <bool name="config_enableAutoPowerModes">true</bool>
 
+    <!-- Configuration to restart radio upon PDP_DEACTIVATE with
+          error cause as Regular deactivation(36). -->
+    <bool name="config_restart_radio_on_pdp_fail_regular_deactivation">false</bool>
+
 </resources>
